Changes in customer page pagination end poits
